--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/app/scss/style.css" />
+    <link rel="stylesheet" href="/app/styles/main.css" />
 
     <title>Frontend Mentor | Easybank landing page</title>
 
@@ -34,9 +34,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="overlay"></div>
+      <div class="overlay has-fade"></div>
 
-      <nav class="container flex flex-jc-sb flex-ai-c">
+      <nav class="container container--pall flex flex-jc-sb flex-ai-c">
         <a href="/www/" class="header__logo">
           <img src="images/logo.svg" alt="Emmanuel Ubachi" srcset="" />
         </a>
@@ -57,36 +57,89 @@
         >
       </nav>
 
-      <div class="header__menu">
+      <div class="header__menu has-fade">
         <a href="">Home</a><a href="">About</a><a href="">Contact</a
         ><a href="">Blog</a><a href="">Careers</a>
       </div>
     </header>
 
-    Request Invite Next generation digital banking Take your financial life
-    online. Your Easybank account will be a one-stop-shop for spending, saving,
-    budgeting, investing, and much more. Request Invite Why choose Easybank? We
-    leverage Open Banking to turn your bank account into your financial hub.
-    Control your finances like never before. Online Banking Our modern web and
-    mobile applications allow you to keep track of your finances wherever you
-    are in the world. Simple Budgeting See exactly where your money goes each
-    month. Receive notifications when you’re close to hitting your limits. Fast
-    Onboarding We don’t do branches. Open your account in minutes online and
-    start taking control of your finances right away. Open API Manage your
-    savings, investments, pension, and much more from one account. Tracking your
-    money has never been easier. Latest Articles By Claire Robinson Receive
-    money in any currency with no fees The world is getting smaller and we’re
-    becoming more mobile. So why should you be forced to only receive money in a
-    single … By Wilson Hutton Treat yourself without worrying about money Our
-    simple budgeting feature allows you to separate out your spending and set
-    realistic limits each month. That means you … By Wilson Hutton Take your
-    Easybank card wherever you go We want you to enjoy your travels. This is why
-    we don’t charge any fees on purchases while you’re abroad. We’ll even show
-    you … By Claire Robinson Our invite-only Beta accounts are now live! After a
-    lot of hard work by the whole team, we’re excited to launch our closed beta.
-    It’s easy to request an invite through the site ... About Us Contact Blog
-    Careers Support Privacy Policy Request Invite © Easybank. All Rights
-    Reserved
+    <section class="hero">
+      <div class="container">
+        <div class="hero__image"></div>
+        <div class="hero__text container--pall">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <a href="#" class="button hero__cta">Request Invite</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="feature container container--pall">
+      <div class="feature__content">
+        <div class="feature__intro">
+          <h2>Why choose Easybank?</h2>
+          <p>
+            We leverage Open Banking to turn your bank account into your
+            financial hub. Control your finances like never before.
+          </p>
+        </div>
+        <div class="feature__grid">
+          <div class="feature__item">
+            <div class="feature__icon"></div>
+            <img src="/www/images/icon-online.svg" />
+            <div class="feature__title">Online Banking</div>
+            <div class="feature__description">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </div>
+          </div>
+          <div class="feature__item">
+            <div class="feature__icon"></div>
+            <img src="/www/images/icon-budgeting.svg" />
+            <div class="feature__title">Simple Budgeting</div>
+            <div class="feature__description">
+              See exactly where your money goes each month. Receive
+              notifications when you’re close to hitting your limits.
+            </div>
+          </div>
+          <div class="feature__item">
+            <div class="feature__icon"></div>
+            <img src="/www/images/icon-onboarding.svg" />
+            <div class="feature__title">Fast Onboarding</div>
+            <div class="feature__description">
+              We don’t do branches. Open your account in minutes online and
+              start taking control of your finances right away.
+            </div>
+          </div>
+          <div class="feature__item">
+            <div class="feature__icon"></div>
+            <img src="/www/images/icon-api.svg" />
+            <div class="feature__title">Open API</div>
+            <div class="feature__description">
+              Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    Latest Articles By Claire Robinson Receive money in any currency with no
+    fees The world is getting smaller and we’re becoming more mobile. So why
+    should you be forced to only receive money in a single … By Wilson Hutton
+    Treat yourself without worrying about money Our simple budgeting feature
+    allows you to separate out your spending and set realistic limits each
+    month. That means you … By Wilson Hutton Take your Easybank card wherever
+    you go We want you to enjoy your travels. This is why we don’t charge any
+    fees on purchases while you’re abroad. We’ll even show you … By Claire
+    Robinson Our invite-only Beta accounts are now live! After a lot of hard
+    work by the whole team, we’re excited to launch our closed beta. It’s easy
+    to request an invite through the site ... About Us Contact Blog Careers
+    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
 
     <div class="attribution">
       Challenge by
