--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/app/styles/main.css" />
+    <link rel="stylesheet" href="/www/main.css" />
 
     <title>Frontend Mentor | Easybank landing page</title>
 
